# LeapSDK-1.2.0

./: .gitignore  README.md
LeapSDK/: CMakeLists.txt  head_sha.txt  install.sh  libLeap.pc.cmake.in  version.txt
LeapSDK/docs/: Leap_SDK_Release_Notes.html  head_sha.txt  index.html  version.txt
LeapSDK/docs/cpp/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
LeapSDK/docs/cpp/_static/: JSONViewer.html
LeapSDK/docs/cpp/api/: Leap.CircleGesture.html  Leap.Config.html  Leap.Controller.html  Leap.Delegate.html  Leap.Device.html  Leap.DeviceList.html  Leap.Finger.html  Leap.FingerList.html  Leap.Frame.html  Leap.Gesture.html  Leap.GestureList.html  Leap.Hand.html  Leap.HandList.html  Leap.InteractionBox.html  Leap.KeyTapGesture.html  Leap.Listener.html  Leap.Matrix.html  Leap.Pointable.html  Leap.PointableList.html  Leap.Screen.html  Leap.ScreenList.html  Leap.ScreenTapGesture.html  Leap.SwipeGesture.html  Leap.Tool.html  Leap.ToolList.html  Leap.Vector.html  Leap_Classes.html
LeapSDK/docs/cpp/devguide/: Leap_Architecture.html  (+14 more)
LeapSDK/docs/csharp/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
LeapSDK/docs/java/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
LeapSDK/docs/javascript/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
LeapSDK/docs/objc/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
LeapSDK/docs/python/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
LeapSDK/samples/: Sample.cpp  Sample.cs
(+304 files in other folders)
